--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -369,10 +369,10 @@ nav {
 				margin-top: 1rem;
 
 				& p {
-					@include error-message(clamp(0.7rem, 1.5vw, 1.1rem));
+					@include error-message();
 				}
 				& h4 {
-					@include succes-message(clamp(0.7rem, 1.5vw, 1.1rem));
+					@include succes-message();
 				}
 			}
 		}
@@ -454,11 +454,11 @@ nav {
 					font-size: clamp(0.8rem, 1vw, 1rem);
 				}
 				& p {
-					@include error-message(clamp(0.7rem, 1.5vw, 1.1rem));
+					@include error-message();
 					margin-bottom: 2rem;
 				}
 				& h4 {
-					@include succes-message(clamp(0.7rem, 1.5vw, 1.1rem));
+					@include succes-message();
 					margin-top: 2rem;
 				}
 			}
