--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -112,11 +112,21 @@ body {
   outline: none;
   font-size: inherit;
   padding: 0.3em 1.5em;
+  text-decoration: none;
   background: #eadedb;
-  border-radius: 0.5em;
   border: none;
   color: rgba(0, 0, 0, 0.794);
   font-size: clamp(1em, 1.7vw, 3em);
+  border-radius: 0.25em;
+  -webkit-box-shadow: 0.1em 0.1em 0.1em #3a2e39;
+          box-shadow: 0.1em 0.1em 0.1em #3a2e39;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.header__slogan__button:hover {
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 nav {
@@ -902,6 +912,10 @@ nav {
   background: url("../../assets/right-arrow.png") no-repeat center center/cover;
 }
 
+.bottom-controls {
+  padding: 1em 1em 5em 1em;
+}
+
 .about {
   background: -webkit-gradient(linear, left top, left bottom, from(#968580), color-stop(#968580), to(#ffffffb8));
   background: linear-gradient(to bottom, #968580, #968580, #ffffffb8);
@@ -1014,12 +1028,12 @@ nav {
   height: -moz-max-content;
   height: max-content;
   width: 100%;
-  padding: 2rem;
   background-color: #968580;
 }
 
 .blog-container {
-  width: 100%;
+  width: clamp(80vw, 40em, 95vw);
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1041,7 +1055,9 @@ nav {
 }
 
 .blog-container .search-container {
-  width: 100%;
+  width: clamp(80vw, 40em, 95vw);
+  margin: 0 auto;
+  padding: 0.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1051,20 +1067,63 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 2rem;
+}
+
+.blog-container .search-container form {
+  padding: 0.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: center;
 }
 
 .blog-container .search-container input {
-  width: 300px;
+  font-size: clamp(1em, 1.5vw, 2em);
+  outline: none;
+  background: none;
+  border: none;
+  -webkit-box-shadow: 0 0.25em 0.1em -0.1em white;
+          box-shadow: 0 0.25em 0.1em -0.1em white;
+  padding: 0.5em 0.75em;
+  color: white;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.blog-container .search-container input::-webkit-input-placeholder {
+  opacity: 1;
+}
+
+.blog-container .search-container input:-ms-input-placeholder {
+  opacity: 1;
+}
+
+.blog-container .search-container input::-ms-input-placeholder {
+  opacity: 1;
+}
+
+.blog-container .search-container input::placeholder {
+  opacity: 1;
+}
+
+.blog-container .search-container input:focus {
+  -webkit-box-shadow: 0 0.25em 0.1em -0.1em orange;
+          box-shadow: 0 0.25em 0.1em -0.1em orange;
+}
+
+.blog-container .search-container .search-icon {
   outline: none;
   border: none;
-  border-bottom: 1px solid #ffffffb8;
-  background: none;
-  line-height: 30px;
+  background: url("../../assets/search-icon.png") no-repeat center center/cover;
+  padding: 0.5em 0.75em;
+  cursor: pointer;
+  width: 3em;
+  height: 3em;
 }
 
 .blog-container .filter-container {
   width: 100%;
+  padding: 0.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1078,7 +1137,6 @@ nav {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 0 3rem;
   margin-bottom: 4rem;
 }
 
@@ -1088,7 +1146,14 @@ nav {
 }
 
 .blog-container .filter-container .btn-container {
-  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.5em;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
 }
 
 .blog-container .filter-container .btn-container button {
@@ -1136,7 +1201,7 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1.5em 0.5em;
+  padding: 1.5em 0 1.5em 0.5em;
   width: clamp(80vw, 40em, 95vw);
   margin: 0 auto;
   color: white;
@@ -1183,71 +1248,141 @@ nav {
 
 .posts-container {
   width: 100%;
+  padding: 0.5em;
+  display: -ms-grid;
+  display: grid;
+  gap: 5em;
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  padding: 2em 0.5em 3em 0.5em;
 }
 
 .post-container {
-  width: 70%;
+  display: none;
   margin: 0 auto;
-  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 3rem;
-  border-bottom: 1px solid #55474e;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  place-items: start center;
+  width: 100%;
+  position: relative;
+  gap: 3em;
+  padding: 2em 0;
 }
 
-.post-container button {
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  background: #55474e;
-  width: 100px;
-  height: 40px;
-  color: #ffffffb8;
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
-  margin: 1rem 0;
-}
-
-.post-container button:focus {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
-          box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 4px -6px;
-}
-
-.post-container button:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
-          box-shadow: rgba(0, 0, 0, 0.7) 2px 8px 8px -5px;
-  -webkit-transform: translate3d(0, 1px, 0);
-          transform: translate3d(0, 1px, 0);
-  -webkit-transition: -webkit-transform 0.3s ease;
-  transition: -webkit-transform 0.3s ease;
-  transition: transform 0.3s ease;
-  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
-}
-
-.post-container button:active {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
+.post-container::after {
+  position: absolute;
+  bottom: -2em;
+  left: 0;
+  content: "";
+  background: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 0.12em;
 }
 
 .post-container img {
-  width: 300px;
-  height: 300px;
+  max-width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: auto;
+  display: block;
+  -webkit-filter: drop-shadow(0.2em 0.2em 0.25em rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(0.2em 0.2em 0.25em rgba(0, 0, 0, 0.25));
+  border-radius: 0.7em;
+}
+
+@media (min-width: 768px) {
+  .post-container img {
+    width: 15em;
+  }
+}
+
+.post-container .text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.post-container .text-container h1 {
+  font-size: clamp(1.5rem, 2vw, 3rem);
+}
+
+.post-container .text-container h2 {
+  font-style: italic;
+}
+
+.post-container .text-container p {
+  max-width: 70ch;
+}
+
+.post-container .text-container a {
+  max-width: 10ch;
+}
+
+.post-container .text-container__contents {
+  padding: 0.5em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1em;
+  font-size: clamp(1rem, 1.2vw, 1.5rem);
+}
+
+.post-container .text-container__contents .hashtag {
+  font-style: italic;
+}
+
+.post-container .text-container .read-more-btn {
+  place-self: flex-end;
+  outline: none;
+  border: none;
+  font-size: inherit;
+  padding: 0.5em 1em;
+  text-transform: lowercase;
+  border-radius: 0.25em;
+  background: #55474e;
+  color: #ffffffb8;
+  cursor: pointer;
+  margin: 3em 0 0 0;
 }
 
 .posters {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  padding: 2rem;
+  background: #968580;
+  padding: 5em 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.posters button {
+  place-self: flex-end;
+}
+
+.posters p,
+.posters pre {
+  max-width: 80ch;
+  padding: 0.5em 0;
+  font-size: clamp(1rem, 1.5vw, 2rem);
+}
+
+.posters code {
+  white-space: normal;
 }
 
 .posters button {
@@ -1286,31 +1421,58 @@ nav {
 }
 
 .posters .card {
-  width: 60%;
+  width: clamp(80vw, 50em, 90vw);
   margin: 0 auto;
   padding: 0.5rem;
   background-color: #968580;
-  -webkit-box-shadow: 10px 10px 10px 2px #000;
-          box-shadow: 10px 10px 10px 2px #000;
-  border-radius: 10px;
+  border-radius: 0.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  place-items: start center;
+  gap: 2em;
 }
 
 .posters .card img {
-  width: 300px;
-  height: 400px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-filter: drop-shadow(0.2em 0.2em 0.25em rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(0.2em 0.2em 0.25em rgba(0, 0, 0, 0.25));
+  border-radius: 0.7em;
+}
+
+@media (min-width: 768px) {
+  .posters .card img {
+    width: 20em;
+  }
+}
+
+.posters .card__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-items: start center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  gap: 2em;
+}
+
+.posters .card__items .post-title {
+  font-size: clamp(1.25rem, 4vw, 3.5rem);
+}
+
+.posters .card__items .post-date {
+  font-style: italic;
+  letter-spacing: 0.05em;
 }
 
 .login {
