--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -1,149 +1,285 @@
 .blog {
-	height: max-content;
-	width: 100%;
-	padding: 2rem;
-	background-color: $secondary-background-color;
+  height: max-content;
+  width: 100%;
+  // padding: 2rem;
+  background-color: $secondary-background-color;
 
-	&-container {
-		width: 100%;
-		@include univerzalni-display(flex, space-evenly, center);
-		flex-direction: column;
+  &-container {
+    width: clamp(80vw, 40em, 95vw);
+    margin: 0 auto;
+    @include univerzalni-display(flex, space-evenly, center);
+    flex-direction: column;
 
-		& h1 {
-			font-size: 6rem;
-			margin-bottom: 3rem;
-		}
+    & h1 {
+      font-size: 6rem;
+      margin-bottom: 3rem;
+    }
 
-		& .search-container {
-			width: 100%;
-			@include univerzalni-display(flex, flex-end, center);
-			margin-right: 2rem;
+    & .search-container {
+      width: clamp(80vw, 40em, 95vw);
+      margin: 0 auto;
+      padding: 0.5em;
+      @include univerzalni-display(flex, flex-end, center);
+      form {
+        padding: 0.5em;
+        display: flex;
+        place-items: center;
+      }
 
-			& input {
-				width: 300px;
-				outline: none;
-				border: none;
-				border-bottom: 1px solid $primary-text-color;
-				background: none;
-				line-height: 30px;
-			}
-		}
+      input {
+        font-size: clamp(1em, 1.5vw, 2em);
+        outline: none;
+        background: none;
+        border: none;
+        box-shadow: 0 0.25em 0.1em -0.1em white;
+        padding: 0.5em 0.75em;
+        color: white;
+        transition: all 0.25s ease-in-out;
 
-		& .filter-container {
-			width: 100%;
-			@include univerzalni-display(flex, center, flex-start);
-			flex-direction: column;
-			padding: 0 3rem;
-			margin-bottom: 4rem;
+        &::placeholder {
+          opacity: 1;
+        }
 
-			& h2 {
-				font-size: 3rem;
-				margin-bottom: 3rem;
-			}
+        &:focus {
+          box-shadow: 0 0.25em 0.1em -0.1em orange;
+        }
+      }
 
-			& .btn-container {
-				width: 100%;
+      .search-icon {
+        outline: none;
+        border: none;
+        background: url("../../assets/search-icon.png") no-repeat center
+          center/cover;
+        padding: 0.5em 0.75em;
+        cursor: pointer;
+        width: 3em;
+        height: 3em;
+      }
+    }
 
-				& button {
-					margin-right: 0.3rem;
-					@include button($primary-background-color, 100px, 40px);
-				}
-			}
-		}
-	}
+    & .filter-container {
+      width: 100%;
+      padding: 0.5em;
+      @include univerzalni-display(flex, center, flex-start);
+      flex-direction: column;
+      margin-bottom: 4rem;
+
+      & h2 {
+        font-size: 3rem;
+        margin-bottom: 3rem;
+      }
+
+      & .btn-container {
+        display: flex;
+        gap: 0.5em;
+        flex-flow: row wrap;
+
+        & button {
+          margin-right: 0.3rem;
+          @include button($primary-background-color, 100px, 40px);
+        }
+      }
+    }
+  }
 }
 
 .desktop-navigation {
-	width: 100%;
-	// border: 1px solid red;
-	display: flex;
-	place-items: center;
-	justify-content: space-between;
-	padding: 1.5em 0.5em;
-	width: clamp(80vw, 40em, 95vw);
-	margin: 0 auto;
-	color: white;
-	font-size: clamp(0.85em, 1.5vw, 1.1em);
-	font-family: "Playfair Display", serif;
-	&__banner {
-		font-size: clamp(1.25em, 2vw, 2.3em);
-		text-shadow: 0 0 0.1em black;
-		text-transform: uppercase;
-		cursor: pointer;
-	}
+  width: 100%;
+  display: flex;
+  place-items: center;
+  justify-content: space-between;
+  padding: 1.5em 0 1.5em 0.5em;
+  width: clamp(80vw, 40em, 95vw);
+  margin: 0 auto;
+  color: white;
+  font-size: clamp(0.85em, 1.5vw, 1.1em);
+  font-family: "Playfair Display", serif;
+  &__banner {
+    font-size: clamp(1.25em, 2vw, 2.3em);
+    text-shadow: 0 0 0.1em black;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
 
-	&__items {
-		display: flex;
-		gap: 1em;
-		text-shadow: 0 0 0.1em black;
-		a {
-			text-transform: lowercase;
-			position: relative;
-			cursor: pointer;
+  &__items {
+    display: flex;
+    gap: 1em;
+    text-shadow: 0 0 0.1em black;
+    a {
+      text-transform: lowercase;
+      position: relative;
+      cursor: pointer;
 
-			&::after {
-				content: "";
-				position: absolute;
-				width: 0%;
-				height: 0.15em;
-				bottom: -0.25em;
-				left: 0;
-				background: white;
-				transition: width 0.5s ease;
-			}
+      &::after {
+        content: "";
+        position: absolute;
+        width: 0%;
+        height: 0.15em;
+        bottom: -0.25em;
+        left: 0;
+        background: white;
+        transition: width 0.5s ease;
+      }
 
-			&:hover {
-				&::after {
-					width: 100%;
-				}
-			}
-		}
-	}
+      &:hover {
+        &::after {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 .posts-container {
-	width: 100%;
+  width: 100%;
+  padding: 0.5em;
+  display: grid;
+  gap: 5em;
+  grid-template-columns: repeat(1, 1fr);
+  padding: 2em 0.5em 3em 0.5em;
 }
 
 .post-container {
-	width: 70%;
-	margin: 0 auto;
-	padding: 1rem;
-	@include univerzalni-display(flex, space-between, center);
-	margin-bottom: 3rem;
-	border-bottom: 1px solid $primary-background-color;
+  display: none;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  place-items: start center;
+  width: 100%;
+  position: relative;
+  gap: 3em;
+  padding: 2em 0;
 
-	& button {
-		@include button($primary-background-color, 100px, 40px);
-		margin: 1rem 0;
-	}
-	& img {
-		width: 300px;
-		height: 300px;
-	}
+  &::after {
+    position: absolute;
+    bottom: -2em;
+    left: 0;
+    content: "";
+    background: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 0.12em;
+  }
+
+  img {
+    max-width: 100%;
+    object-fit: cover;
+    height: auto;
+    display: block;
+    filter: drop-shadow(0.2em 0.2em 0.25em rgba(0, 0, 0, 0.25));
+    border-radius: 0.7em;
+
+    @media (min-width: 768px) {
+      width: 15em;
+    }
+  }
+
+  .text-container {
+    display: flex;
+    flex-direction: column;
+    // gap: 2em;
+    h1 {
+      font-size: clamp(1.5rem, 2vw, 3rem);
+    }
+    h2 {
+      font-style: italic;
+    }
+    p {
+      max-width: 70ch;
+    }
+
+    a {
+      max-width: 10ch;
+    }
+    &__contents {
+      padding: 0.5em 0;
+      display: flex;
+      flex-direction: column;
+      gap: 1em;
+      font-size: clamp(1rem, 1.2vw, 1.5rem);
+      .hashtag {
+        font-style: italic;
+      }
+    }
+    .read-more-btn {
+      place-self: flex-end;
+
+      outline: none;
+      border: none;
+      font-size: inherit;
+      padding: 0.5em 1em;
+      text-transform: lowercase;
+      border-radius: 0.25em;
+      background: $primary-background-color;
+      color: $primary-text-color;
+      cursor: pointer;
+      margin: 3em 0 0 0;
+    }
+  }
 }
 
 .posters {
-	height: max-content;
-	padding: 2rem;
+  background: $secondary-background-color;
+  padding: 5em 1em;
+  display: flex;
+  flex-direction: column;
+  // border: 5px solid red;
+  button {
+    place-self: flex-end;
+  }
 
-	& button {
-		@include button($primary-background-color, 100px, 40px);
-	}
+  p,
+  pre {
+    max-width: 80ch;
+    padding: 0.5em 0;
+    font-size: clamp(1rem, 1.5vw, 2rem);
+  }
 
-	& .card {
-		width: 60%;
-		margin: 0 auto;
-		padding: 0.5rem;
-		background-color: $secondary-background-color;
-		box-shadow: 10px 10px 10px 2px #000;
-		border-radius: 10px;
-		@include univerzalni-display(flex, space-between, center);
-		flex-direction: column;
+  code {
+    white-space: normal;
+  }
 
-		& img {
-			width: 300px;
-			height: 400px;
-		}
-	}
+  & button {
+    @include button($primary-background-color, 100px, 40px);
+  }
+
+  & .card {
+    width: clamp(80vw, 50em, 90vw);
+    margin: 0 auto;
+    padding: 0.5rem;
+    background-color: $secondary-background-color;
+    border-radius: 0.5em;
+    display: flex;
+    flex-direction: column;
+    place-items: start center;
+    gap: 2em;
+
+    & img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      object-fit: cover;
+      filter: drop-shadow(0.2em 0.2em 0.25em rgba(0, 0, 0, 0.25));
+      border-radius: 0.7em;
+
+      @media (min-width: 768px) {
+        width: 20em;
+      }
+    }
+
+    &__items {
+      display: flex;
+      place-items: start center;
+      flex-flow: row wrap;
+      gap: 2em;
+
+      .post-title {
+        font-size: clamp(1.25rem, 4vw, 3.5rem);
+      }
+
+      .post-date {
+        font-style: italic;
+        letter-spacing: 0.05em;
+      }
+    }
+  }
 }
